"""
Médico 360 — Modelos SQLAlchemy baseados no ERD (medico360_erd_final.mermaid).
Cobre todas as entidades necessárias para o Agregador + auditoria.
"""

import enum
import uuid
from datetime import UTC, date, datetime
from decimal import Decimal

from pgvector.sqlalchemy import Vector
from sqlalchemy import (
    Boolean,
    Date,
    DateTime,
    Float,
    ForeignKey,
    Index,
    Integer,
    Numeric,
    String,
    Text,
)
from sqlalchemy.dialects.postgresql import INET, JSONB, UUID
from sqlalchemy.orm import Mapped, mapped_column, relationship

from app.core.database import Base

# ── Helpers ──────────────────────────────────────────────────

def utcnow() -> datetime:
    return datetime.now(UTC)


def new_uuid() -> uuid.UUID:
    return uuid.uuid4()


# ── Enums ────────────────────────────────────────────────────


class FeatureEnum(str, enum.Enum):
    AGREGADOR = "AGREGADOR"
    ORQUESTRADOR = "ORQUESTRADOR"


class ModeEnum(str, enum.Enum):
    BIZU = "BIZU"
    SHERLOCK = "SHERLOCK"
    FARMACIA = "FARMACIA"
    INTERACOES = "INTERACOES"
    PRODUTIVIDADE = "PRODUTIVIDADE"


class InputTypeEnum(str, enum.Enum):
    TEXT = "TEXT"
    AUDIO = "AUDIO"


# ── Company - ok ──────────────────────────────────────────────────

class Company(Base):
    __tablename__ = "company"

    id: Mapped[uuid.UUID] = mapped_column(UUID(as_uuid=True), primary_key=True, default=new_uuid)
    name: Mapped[str] = mapped_column(String(255), nullable=False)
    slug: Mapped[str] = mapped_column(String(255), unique=True, nullable=False)
    settings: Mapped[dict | None] = mapped_column(JSONB, default=dict)
    company_status: Mapped[bool] = mapped_column(Boolean, default=True)
    legacy_company_id: Mapped[str | None] = mapped_column(String(255))
    created_at: Mapped[datetime] = mapped_column(DateTime(timezone=True), default=utcnow)
    updated_at: Mapped[datetime] = mapped_column(DateTime(timezone=True), default=utcnow, onupdate=utcnow)

    # Relationships
    users: Mapped[list["User"]] = relationship(back_populates="company")


# ── User - ok ─────────────────────────────────────────────────────

class User(Base):
    __tablename__ = "users"

    id: Mapped[uuid.UUID] = mapped_column(UUID(as_uuid=True), primary_key=True, default=new_uuid)
    phone_number: Mapped[str | None] = mapped_column(String(20))
    company_id: Mapped[uuid.UUID | None] = mapped_column(ForeignKey("company.id"))
    email: Mapped[str] = mapped_column(String(255), unique=True, nullable=False)
    # Identificador do aluno na Waid. É a CHAVE estável de quem entra pelo LMS —
    # o e-mail pode mudar lá e, sem isto, o próximo login criaria conta nova.
    # Nulo para quem entrou por OTP/convite, e para quem ainda não relogou.
    waid_uuid: Mapped[str | None] = mapped_column(String(64))
    name: Mapped[str | None] = mapped_column(String(255))
    crm: Mapped[str | None] = mapped_column(String(20))
    crm_state: Mapped[str | None] = mapped_column(String(2))
    role: Mapped[str] = mapped_column(String(50), default="beta_user")
    med_status: Mapped[str | None] = mapped_column(String(50))
    # `specialty` é o RÓTULO (casa por string com `news.topic_specialties.specialty`);
    # `specialty_slug` é a CHAVE. Escrita SEMPRE por `app.medicina.identidade`.
    specialty: Mapped[str | None] = mapped_column(String(100))
    specialty_slug: Mapped[str | None] = mapped_column(String(80), index=True)
    # Todas as especialidades (duas residências é comum: Clínica Médica é
    # pré-requisito). FEED e ACESSO consultam esta lista; `specialty_slug` é só
    # a principal, para exibição e para o prompt.
    specialties: Mapped[list | None] = mapped_column(JSONB)
    # De onde veio a especialidade — `declarado` > `cfm` > `cadastro` > `waid_grupo`.
    # Sem esta coluna a reconciliação automática sobrescreveria a correção manual
    # do médico no login seguinte.
    specialty_source: Mapped[str | None] = mapped_column(String(20))
    specialty_updated_at: Mapped[datetime | None] = mapped_column(DateTime(timezone=True))
    specialty_rqe: Mapped[str | None] = mapped_column(String(20))
    # Categoria profissional (médico/enfermeiro/...). NÃO é `med_status`, que é
    # estágio de carreira (graduando/generalista/residente/especialista).
    profissao: Mapped[str | None] = mapped_column(String(40))
    crm_status: Mapped[str | None] = mapped_column(String(30))
    crm_verified_at: Mapped[datetime | None] = mapped_column(DateTime(timezone=True))
    # Id do registro no banco da página intermediária: é o que torna o webhook
    # de cadastro idempotente.
    cadastro_externo_id: Mapped[str | None] = mapped_column(String(64))
    cfm_payload: Mapped[dict | None] = mapped_column(JSONB)
    enrollment_date: Mapped[date | None] = mapped_column(Date)
    onboarding_complete: Mapped[bool] = mapped_column(Boolean, default=False, nullable=False)
    status: Mapped[bool] = mapped_column(Boolean, default=True)
    legacy_user_id: Mapped[str | None] = mapped_column(String(255))
    created_at: Mapped[datetime] = mapped_column(DateTime(timezone=True), default=utcnow)
    updated_at: Mapped[datetime] = mapped_column(DateTime(timezone=True), default=utcnow, onupdate=utcnow)

    # Relationships
    company: Mapped["Company | None"] = relationship(back_populates="users")
    conversations: Mapped[list["Conversation"]] = relationship(back_populates="user", cascade="all, delete-orphan")
    preferences: Mapped["UserPreference | None"] = relationship(back_populates="user", uselist=False, cascade="all, delete-orphan")
    weekly_usage: Mapped["UserWeeklyUsage | None"] = relationship(back_populates="user", uselist=False, cascade="all, delete-orphan")


# ── User Preferences - ok ─────────────────────────────────────

class UserPreference(Base):
    __tablename__ = "user_preferences"

    id: Mapped[uuid.UUID] = mapped_column(UUID(as_uuid=True), primary_key=True, default=new_uuid)
    user_id: Mapped[uuid.UUID] = mapped_column(ForeignKey("users.id"), unique=True, nullable=False)
    selected_models: Mapped[dict | None] = mapped_column(JSONB, default=list)
    ui_settings: Mapped[dict | None] = mapped_column(JSONB, default=dict)
    notification_prefs: Mapped[dict | None] = mapped_column(JSONB, default=dict)
    updated_at: Mapped[datetime] = mapped_column(DateTime(timezone=True), default=utcnow, onupdate=utcnow)

    # Relationships
    user: Mapped["User"] = relationship(back_populates="preferences")


# ── User Weekly Usage ─────────────────────────────────────────────

class UserWeeklyUsage(Base):
    __tablename__ = "user_weekly_usage"

    id: Mapped[uuid.UUID] = mapped_column(UUID(as_uuid=True), primary_key=True, default=new_uuid)
    user_id: Mapped[uuid.UUID] = mapped_column(ForeignKey("users.id", ondelete="CASCADE"), unique=True, nullable=False)
    week_start: Mapped[datetime] = mapped_column(DateTime(timezone=True), nullable=False)
    total_cost_usd: Mapped[Decimal] = mapped_column(Numeric(10, 6), nullable=False, default=Decimal("0"))
    created_at: Mapped[datetime] = mapped_column(DateTime(timezone=True), default=utcnow)
    updated_at: Mapped[datetime | None] = mapped_column(DateTime(timezone=True), onupdate=utcnow)

    # Relationships
    user: Mapped["User"] = relationship(back_populates="weekly_usage")


# ── Folder ───────────────────────────────────────────────────────

class Folder(Base):
    __tablename__ = "folders"
    __table_args__ = (
        Index("ix_folders_user_created_at", "user_id", "created_at"),
    )

    id: Mapped[uuid.UUID] = mapped_column(UUID(as_uuid=True), primary_key=True, default=new_uuid)
    user_id: Mapped[uuid.UUID] = mapped_column(ForeignKey("users.id"), nullable=False)
    name: Mapped[str] = mapped_column(String(200), nullable=False)
    # "clinical" (pasta de um paciente) ou "general" (estudo, gestão, tema).
    # Decide o RÓTULO na tela e, o que importa mais, a marcação com que o
    # contexto é injetado no prompt — ver `formatar_bloco_evolucao`.
    folder_kind: Mapped[str] = mapped_column(String(20), nullable=False, default="clinical")
    # Contexto declarado pelo médico: a evolução do paciente numa pasta
    # clínica, o objetivo/escopo numa pasta geral. Diferente do contexto
    # recuperado por similaridade em `folder_context_service`: aquele é
    # material de APOIO e pode ser de outro paciente; este é declarado e entra
    # na íntegra em toda mensagem da pasta.
    #
    # O nome da coluna continua `clinical_context` por vir da 009 — renomear
    # exigiria migration com janela de incompatibilidade entre app e banco,
    # e o campo é o mesmo, com rótulo diferente conforme `folder_kind`.
    # Nulo é o caso normal — uma pasta pode ser só organização por tema.
    clinical_context: Mapped[str | None] = mapped_column(Text, nullable=True)
    created_at: Mapped[datetime] = mapped_column(DateTime(timezone=True), default=utcnow)
    updated_at: Mapped[datetime] = mapped_column(DateTime(timezone=True), default=utcnow, onupdate=utcnow)

    # Relationships
    conversations: Mapped[list["Conversation"]] = relationship(back_populates="folder")


# ── Conversation - ok ────────────────────────────────────────────

class Conversation(Base):
    __tablename__ = "conversations"
    __table_args__ = (
        Index("ix_conversations_user_status_updated_at", "user_id", "status", "updated_at"),
    )

    id: Mapped[uuid.UUID] = mapped_column(UUID(as_uuid=True), primary_key=True, default=new_uuid)
    user_id: Mapped[uuid.UUID] = mapped_column(ForeignKey("users.id"), nullable=False)
    folder_id: Mapped[uuid.UUID | None] = mapped_column(ForeignKey("folders.id", ondelete="SET NULL"), nullable=True)
    title: Mapped[str | None] = mapped_column(String(500))
    feature: Mapped[str] = mapped_column(String(50), nullable=False)
    status: Mapped[bool] = mapped_column(Boolean, default=True)
    created_at: Mapped[datetime] = mapped_column(DateTime(timezone=True), default=utcnow)
    updated_at: Mapped[datetime] = mapped_column(DateTime(timezone=True), default=utcnow, onupdate=utcnow)

    # Relationships
    user: Mapped["User"] = relationship(back_populates="conversations")
    folder: Mapped["Folder | None"] = relationship(back_populates="conversations")
    interactions: Mapped[list["Interaction"]] = relationship(back_populates="conversation")


# ── Interaction - ok ─────────────────────────────────────────────

class Interaction(Base):
    __tablename__ = "interactions"
    __table_args__ = (
        Index("ix_interactions_user_feature", "user_id", "feature"),
        Index("ix_interactions_conversation_feature", "conversation_id", "feature"),
        Index("ix_interactions_conversation_user_status", "conversation_id", "user_id", "status"),
        Index("ix_interactions_user_created_at", "user_id", "created_at"),
        # `load_history` roda em toda mensagem: filtra por conversa + status e
        # ordena por `started_at` desc. Sem a terceira coluna o Postgres ordena
        # em memória o histórico inteiro para pegar os 40 mais recentes.
        Index(
            "ix_interactions_conversation_status_started_at",
            "conversation_id", "status", "started_at",
        ),
    )

    id: Mapped[uuid.UUID] = mapped_column(UUID(as_uuid=True), primary_key=True, default=new_uuid)
    conversation_id: Mapped[uuid.UUID] = mapped_column(ForeignKey("conversations.id"), nullable=False)
    user_id: Mapped[uuid.UUID] = mapped_column(ForeignKey("users.id"), nullable=False)
    company_id: Mapped[uuid.UUID | None] = mapped_column(ForeignKey("company.id"))
    feature: Mapped[str] = mapped_column(String(50), nullable=False)
    mode: Mapped[str | None] = mapped_column(String(50))
    input_type: Mapped[str] = mapped_column(String(20), default="TEXT")
    prompt_text: Mapped[str] = mapped_column(Text, nullable=False)
    prompt_sanitized: Mapped[bool] = mapped_column(Boolean, default=False)
    triage_confidence: Mapped[float | None] = mapped_column(Float)
    triage_category: Mapped[str | None] = mapped_column(String(50))
    response_time_ms: Mapped[int | None] = mapped_column(Integer)
    cache_hit: Mapped[bool] = mapped_column(Boolean, default=False)
    token_cost_usd: Mapped[Decimal] = mapped_column(Numeric(10, 6), default=Decimal("0"))
    confidence_score: Mapped[float | None] = mapped_column(Float)
    specialty_detected: Mapped[str | None] = mapped_column(String(100))
    topic_detected: Mapped[str | None] = mapped_column(String(255))
    status: Mapped[str] = mapped_column(String(30), default="completed")
    clarification_questions: Mapped[list | None] = mapped_column(JSONB)
    started_at: Mapped[datetime] = mapped_column(DateTime(timezone=True), default=utcnow)
    completed_at: Mapped[datetime | None] = mapped_column(DateTime(timezone=True))
    created_at: Mapped[datetime] = mapped_column(DateTime(timezone=True), default=utcnow)

    # Relationships
    conversation: Mapped["Conversation"] = relationship(back_populates="interactions")
    responses: Mapped[list["InteractionResponse"]] = relationship(back_populates="interaction")
    pharma_alerts: Mapped[list["PharmaAlert"]] = relationship(back_populates="interaction")
    medications: Mapped[list["InteractionMedication"]] = relationship(back_populates="interaction")
    pubmed_validations: Mapped[list["PubmedValidation"]] = relationship(back_populates="interaction")


# ── Interaction Response - ok ─────────────────────────────────────

class InteractionResponse(Base):
    __tablename__ = "interaction_responses"

    id: Mapped[uuid.UUID] = mapped_column(UUID(as_uuid=True), primary_key=True, default=new_uuid)
    interaction_id: Mapped[uuid.UUID] = mapped_column(ForeignKey("interactions.id"), nullable=False, index=True)
    model_used: Mapped[str] = mapped_column(String(100), nullable=False)
    response_text: Mapped[str] = mapped_column(Text, nullable=False)
    response_time_ms: Mapped[int | None] = mapped_column(Integer)
    tokens_in: Mapped[int | None] = mapped_column(Integer)
    tokens_out: Mapped[int | None] = mapped_column(Integer)
    cost_usd: Mapped[Decimal] = mapped_column(Numeric(10, 6), default=Decimal("0"))
    is_fallback: Mapped[bool] = mapped_column(Boolean, default=False)
    error_message: Mapped[str | None] = mapped_column(Text)
    extra_metadata: Mapped[dict | None] = mapped_column(JSONB, nullable=True)
    created_at: Mapped[datetime] = mapped_column(DateTime(timezone=True), default=utcnow)

    # Relationships
    interaction: Mapped["Interaction"] = relationship(back_populates="responses")


# ── Pharma Alert - ok ────────────────────────────────────────────

class PharmaAlert(Base):
    __tablename__ = "pharma_alerts"

    id: Mapped[uuid.UUID] = mapped_column(UUID(as_uuid=True), primary_key=True, default=new_uuid)
    interaction_id: Mapped[uuid.UUID] = mapped_column(ForeignKey("interactions.id"), nullable=False, index=True)
    alert_level: Mapped[int] = mapped_column(Integer, nullable=False)
    alert_color: Mapped[str] = mapped_column(String(20), nullable=False)
    description: Mapped[str] = mapped_column(Text, nullable=False)
    source_api: Mapped[str] = mapped_column(String(50))
    doctor_justification: Mapped[str | None] = mapped_column(Text)
    acknowledged_at: Mapped[datetime | None] = mapped_column(DateTime(timezone=True))
    created_at: Mapped[datetime] = mapped_column(DateTime(timezone=True), default=utcnow)

    # Relationships
    interaction: Mapped["Interaction"] = relationship(back_populates="pharma_alerts")


# ── Interaction Medication - ok ───────────────────────────────────

class InteractionMedication(Base):
    __tablename__ = "interaction_medications"

    id: Mapped[uuid.UUID] = mapped_column(UUID(as_uuid=True), primary_key=True, default=new_uuid)
    interaction_id: Mapped[uuid.UUID] = mapped_column(ForeignKey("interactions.id"), nullable=False, index=True)
    medication_raw: Mapped[str] = mapped_column(String(255), nullable=False)
    medication_normalized: Mapped[str | None] = mapped_column(String(255))
    atc_code: Mapped[str | None] = mapped_column(String(50))
    created_at: Mapped[datetime] = mapped_column(DateTime(timezone=True), default=utcnow)
    source: Mapped[str] = mapped_column(String(20), default="prompt")

    # Relationships
    interaction: Mapped["Interaction"] = relationship(back_populates="medications")


# ── PubMed Validation - ok ────────────────────────────────────────

class PubmedValidation(Base):
    __tablename__ = "pubmed_validations"

    id: Mapped[uuid.UUID] = mapped_column(UUID(as_uuid=True), primary_key=True, default=new_uuid)
    interaction_id: Mapped[uuid.UUID] = mapped_column(ForeignKey("interactions.id"), nullable=False, index=True)
    pmid: Mapped[str] = mapped_column(String(20), nullable=False)
    article_title: Mapped[str | None] = mapped_column(Text)
    abstract_snippet: Mapped[str | None] = mapped_column(Text)
    relevance_score: Mapped[float | None] = mapped_column(Float)
    created_at: Mapped[datetime] = mapped_column(DateTime(timezone=True), default=utcnow)

    # Relationships
    interaction: Mapped["Interaction"] = relationship(back_populates="pubmed_validations")


# ── Audit Log ────────────────────────────────────────────────

class AuditLog(Base):
    __tablename__ = "audit_logs"
    __table_args__ = (
        # `vigilancia_service` faz `max(created_at) WHERE action = ...` a cada
        # 6h; esta tabela é escrita uma vez por interação. Ver migration 011.
        Index("ix_audit_logs_action_created_at", "action", "created_at"),
        # Anonimização no fluxo de exclusão de conta (LGPD).
        Index("ix_audit_logs_user_id", "user_id"),
    )

    id: Mapped[uuid.UUID] = mapped_column(UUID(as_uuid=True), primary_key=True, default=new_uuid)
    user_id: Mapped[uuid.UUID | None] = mapped_column(ForeignKey("users.id"))
    interaction_id: Mapped[uuid.UUID | None] = mapped_column(ForeignKey("interactions.id"))
    action: Mapped[str] = mapped_column(String(100), nullable=False)
    entity_type: Mapped[str | None] = mapped_column(String(100))
    entity_id: Mapped[uuid.UUID | None] = mapped_column(UUID(as_uuid=True))
    metadata_: Mapped[dict | None] = mapped_column("metadata", JSONB)
    ip_address: Mapped[str | None] = mapped_column(INET)
    user_agent: Mapped[str | None] = mapped_column(Text)
    created_at: Mapped[datetime] = mapped_column(DateTime(timezone=True), default=utcnow)


# ── Consent Log ──────────────────────────────────────────────

class ConsentLog(Base):
    __tablename__ = "consent_logs"

    id: Mapped[uuid.UUID] = mapped_column(UUID(as_uuid=True), primary_key=True, default=new_uuid)
    user_id: Mapped[uuid.UUID] = mapped_column(ForeignKey("users.id"), nullable=False)
    consent_type: Mapped[str] = mapped_column(String(100), nullable=False)
    accepted: Mapped[bool] = mapped_column(Boolean, nullable=False)
    ip_address: Mapped[str | None] = mapped_column(INET)
    user_agent: Mapped[str | None] = mapped_column(Text)
    accepted_at: Mapped[datetime | None] = mapped_column(DateTime(timezone=True))
    revoked_at: Mapped[datetime | None] = mapped_column(DateTime(timezone=True))
    created_at: Mapped[datetime] = mapped_column(DateTime(timezone=True), default=utcnow)

# ── Pricing AI Models ──────────────────────────────────────────────

class ModelPricing(Base):
    __tablename__ = "model_pricing"

    id: Mapped[uuid.UUID] = mapped_column(UUID(as_uuid=True), primary_key=True, default=new_uuid)
    model_id: Mapped[str] = mapped_column(String(100), unique=True, nullable=False)
    provider: Mapped[str] = mapped_column(String(50), nullable=False)
    provider_type: Mapped[str] = mapped_column(String(50), nullable=False)
    display_name: Mapped[str] = mapped_column(String(100), nullable=False)
    input_per_million: Mapped[Decimal] = mapped_column(Numeric(10, 4), nullable=False)
    output_per_million: Mapped[Decimal] = mapped_column(Numeric(10, 4), nullable=False)
    status: Mapped[bool] = mapped_column(Boolean, default=True)
    updated_at: Mapped[datetime] = mapped_column(DateTime(timezone=True), default=utcnow, onupdate=utcnow)
    created_at: Mapped[datetime] = mapped_column(DateTime(timezone=True), default=utcnow)


# ── Semantic Cache ────────────────────────────────────────────

class SemanticCache(Base):
    __tablename__ = "semantic_cache"

    id: Mapped[uuid.UUID] = mapped_column(UUID(as_uuid=True), primary_key=True, default=new_uuid)
    mode: Mapped[str] = mapped_column(String(50), nullable=False)
    normalized_prompt: Mapped[str] = mapped_column(Text, nullable=False)
    prompt_embedding: Mapped[list] = mapped_column(Vector(1536), nullable=False)
    response_json: Mapped[dict] = mapped_column(JSONB, nullable=False)
    hit_count: Mapped[int] = mapped_column(Integer, default=0)
    created_at: Mapped[datetime] = mapped_column(DateTime(timezone=True), default=utcnow)
    expires_at: Mapped[datetime] = mapped_column(DateTime(timezone=True), nullable=False, index=True)


# ── OTP Codes ─────────────────────────────────────────────────

class OtpCode(Base):
    __tablename__ = "otp_codes"

    id: Mapped[uuid.UUID] = mapped_column(UUID(as_uuid=True), primary_key=True, default=new_uuid)
    email: Mapped[str] = mapped_column(String(255), nullable=False, index=True)
    code: Mapped[str] = mapped_column(String(6), nullable=False)
    created_at: Mapped[datetime] = mapped_column(DateTime(timezone=True), default=utcnow)
    expires_at: Mapped[datetime] = mapped_column(DateTime(timezone=True), nullable=False)
    used: Mapped[bool] = mapped_column(Boolean, default=False)
    failed_attempts: Mapped[int] = mapped_column(Integer, default=0, nullable=False)


# ── File Extractions ──────────────────────────────────────────

class MessageEmbedding(Base):
    """
    Trecho de conversa indexado para busca semântica dentro de uma pasta.

    Uma interação vira até dois registros — a pergunta e a resposta —, porque a
    pergunta do médico e a conclusão do assistente respondem a buscas
    diferentes.
    """

    __tablename__ = "message_embeddings"
    __table_args__ = (
        Index("ix_message_embeddings_user_conversation", "user_id", "conversation_id"),
        Index("ix_message_embeddings_interaction", "interaction_id", "role"),
    )

    id: Mapped[uuid.UUID] = mapped_column(UUID(as_uuid=True), primary_key=True, default=new_uuid)
    interaction_id: Mapped[uuid.UUID] = mapped_column(
        ForeignKey("interactions.id", ondelete="CASCADE"), nullable=False
    )
    conversation_id: Mapped[uuid.UUID] = mapped_column(
        ForeignKey("conversations.id", ondelete="CASCADE"), nullable=False
    )
    # Denormalizado a partir da conversa: o filtro por dono é a garantia de
    # isolamento da busca, e não deve depender de um JOIN que alguém possa
    # esquecer de escrever.
    user_id: Mapped[uuid.UUID] = mapped_column(
        ForeignKey("users.id", ondelete="CASCADE"), nullable=False
    )
    role: Mapped[str] = mapped_column(String(20), nullable=False)
    content: Mapped[str] = mapped_column(Text, nullable=False)
    embedding: Mapped[list] = mapped_column(Vector(1536), nullable=False)
    created_at: Mapped[datetime] = mapped_column(DateTime(timezone=True), default=utcnow)


class FileExtraction(Base):
    __tablename__ = "file_extractions"
    __table_args__ = (
        Index("ix_file_extractions_user_id", "user_id"),
        Index("ix_file_extractions_interaction_id", "interaction_id"),
    )

    id: Mapped[uuid.UUID] = mapped_column(UUID(as_uuid=True), primary_key=True, default=new_uuid)
    user_id: Mapped[uuid.UUID] = mapped_column(ForeignKey("users.id", ondelete="CASCADE"), nullable=False)
    # Mensagem em que o anexo foi enviado. Nulo enquanto o arquivo já foi
    # extraído mas a mensagem ainda não saiu, e nas extrações anteriores à
    # migration 001 — para as quais não há como inferir a mensagem.
    interaction_id: Mapped[uuid.UUID | None] = mapped_column(
        ForeignKey("interactions.id", ondelete="SET NULL"), nullable=True
    )
    file_name: Mapped[str] = mapped_column(String(255), nullable=False)
    file_type: Mapped[str] = mapped_column(String(50), nullable=False)
    extracted_text: Mapped[str] = mapped_column(Text, nullable=False)
    image_base64: Mapped[str | None] = mapped_column(Text, nullable=True)
    image_media_type: Mapped[str | None] = mapped_column(String(50), nullable=True)
    created_at: Mapped[datetime] = mapped_column(DateTime(timezone=True), default=utcnow)


# ── Invite Tokens ─────────────────────────────────────────────

class InviteToken(Base):
    __tablename__ = "invite_tokens"

    id: Mapped[uuid.UUID] = mapped_column(UUID(as_uuid=True), primary_key=True, default=new_uuid)
    token: Mapped[uuid.UUID] = mapped_column(UUID(as_uuid=True), default=new_uuid, unique=True, nullable=False)
    email: Mapped[str | None] = mapped_column(String(255))
    created_by: Mapped[uuid.UUID | None] = mapped_column(ForeignKey("users.id"))
    created_at: Mapped[datetime] = mapped_column(DateTime(timezone=True), default=utcnow)
    expires_at: Mapped[datetime] = mapped_column(DateTime(timezone=True), nullable=False)
    used: Mapped[bool] = mapped_column(Boolean, default=False)